--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 #image-gallery::before {
     content: "";
     position: absolute;
-    background: url(/images/brush-lg.png);
+    background: url(/images/brush.png);
     background-size: cover;
     background-position: center;
     width: 100%;
